Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8.2
-
-
1a072b644 (dev), b6d77ea90 (6.9), ab1a9573a (6.8)
-
Multimedia wk 7-8
Description
User informed that they are working to migrate their project to Qt 6.8.2 from Qt 6.7 but they are stuck with an issue with audio output on Windows.
The available audio formats seem to be very limited to one format.
"
I'll attach a text document containing the results of a simple test app I wrote. I tested each of Qt 6.7.2 and Qt 6.8.2, each on Linux (Fedora 41) and Windows 11, running on the same PC (I have a dual-boot system).
As a quick example, for my default audio device...
- On Linux, with Qt 6.7.2 or Qt 6.8.2, it can handle UInt8, Int16, Float, with 1 to 32 channels, at sample rates from 1 to 384000 Hz.
- On Windows with Qt 6.7.2, it can handle UInt8, Int16, Float, with 1 to 2 channels, at sample rates from 11025 to 96000 Hz.
- On Windows with Qt 6.8.2, it can only handle Float, with 2 channels, and a sample rate of 48000 Hz.
I've checked plugin loading and it the ffmpegmediaplugin loads fine, both in Debug and Release. The end of the attached text file shows the output from a run with QT_DEBUG_PLUGINS=1.
I've also tested with the windowsmediaplugin instead of the ffmpegmediaplugin and got the same results.
My simple test project is available on GitHub here: https://github.com/Chris1LDN/QtAudioTest
"
Attachments
Issue Links
- is duplicated by
-
QTBUG-133774 Windows 64 bit QAudioDevice format support regression 6.8.1 to 6.8.2
-
- Closed
-