Windows: WASAPI - relax heuristics for inferring max channel count

Some drivers don't provide a "closest match" when checking
IsFormatSupported.
We modify the heuristics in the following way
* if sampling rate / sample format of the "closest match" don't match,
we skip this probe entirely
* if the IsFormatSupported fails without a "closest match", we
brute-force probe all formats. However we only probe for two channels,
as brude force probing is rather expensive.

Task-number: QTBUG-133538
Pick-to: 6.8
Change-Id: Ib5e68d020db030a8b42dae68491ef24895c0d19b
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
(cherry picked from commit 1a072b6442bb3985338884686e605d588f81754d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>