src/multimedia/windows/qwindowsaudiodevice.cpp
@@ -72,6 +72,9 @@ int maxChannelCountForFormFactor(EndpointFormFactor formFactor)
     case EndpointFormFactor::DigitalAudioDisplayDevice:
         return 8; // HDMI can have max 8 channels
 
+    case EndpointFormFactor::Microphone:
+        return 32; // 32 channels should be more than enough for real-world microphones
+
     default:
         return 128;
     }
@@ -119,41 +122,35 @@ struct FormatProbeResult
     }
 };
 
-std::optional<int> inferMaxNumberOfChannelsForSampleRate(const ComPtr<IAudioClient> &audioClient,
-                                                         QAudioFormat::SampleFormat sampleFormat,
-                                                         int sampleRate,
-                                                         int maxChannelsForFormFactor)
+std::optional<QAudioFormat> performIsFormatSupportedWithClosestMatch(const ComPtr<IAudioClient> &audioClient,
+                                                                     const QAudioFormat &fmt)
 {
     using namespace QWindowsAudioUtils;
-
-    QAudioFormat fmt;
-    fmt.setSampleFormat(sampleFormat);
-    fmt.setSampleRate(sampleRate);
-    fmt.setChannelCount(maxChannelsForFormFactor);
-
     std::optional<WAVEFORMATEXTENSIBLE> formatEx = toWaveFormatExtensible(fmt);
-    if (!formatEx)
+    if (!formatEx) {
+        qCWarning(qLcAudioDeviceProbes) << "toWaveFormatExtensible failed" << fmt;
         return std::nullopt;
+    }
 
+    qCDebug(qLcAudioDeviceProbes) << "performIsFormatSupportedWithClosestMatch for" << fmt;
     QComTaskResource<WAVEFORMATEX> closestMatch;
     HRESULT result = audioClient->IsFormatSupported(AUDCLNT_SHAREMODE_SHARED, &formatEx->Format,
                                                     closestMatch.address());
 
-    if (FAILED(result))
+    if (FAILED(result)) {
+        qCDebug(qLcAudioDeviceProbes) << "performIsFormatSupportedWithClosestMatch: error" << QSystemError::windowsComString(result);
         return std::nullopt;
+    }
 
     if (closestMatch) {
         QAudioFormat closestMatchFormat = waveFormatExToFormat(*closestMatch);
-        if (closestMatchFormat.sampleRate() != sampleRate)
-            return std::nullopt; // sample rate not supported at all
-
-        if (closestMatchFormat.sampleFormat() != sampleFormat)
-            return std::nullopt; // sample format not supported for this sample rate
-
-        return closestMatchFormat.channelCount();
+        qCDebug(qLcAudioDeviceProbes) << "performProbe returned closest match" << closestMatchFormat;
+        return closestMatchFormat;
     }
 
-    return maxChannelsForFormFactor;
+    qCDebug(qLcAudioDeviceProbes) << "performProbe successful";
+
+    return fmt;
 }
 
 std::optional<FormatProbeResult> probeFormats(const ComPtr<IAudioClient> &audioClient,
@@ -172,18 +169,39 @@ std::optional<FormatProbeResult> probeFormats(const ComPtr<IAudioClient> &audioC
     for (QAudioFormat::SampleFormat sampleFormat : QtPrivate::allSupportedSampleFormats) {
         for (int sampleRate : QtPrivate::allSupportedSampleRates) {
 
-            // we initially probe for 128 channels for the format.
-            // wasapi will recommend a "closest" match, containing the max number of channels we can
+            // we initially probe for the maximum channel count for the format.
+            // wasapi will typically recommend a "closest" match, containing the max number of channels we can
             // probe for.
-            std::optional<int> maxChannelForFormat = inferMaxNumberOfChannelsForSampleRate(
-                    audioClient, sampleFormat, sampleRate, maxChannelsForFormFactor);
+            QAudioFormat initialProbeFormat;
+            initialProbeFormat.setSampleFormat(sampleFormat);
+            initialProbeFormat.setSampleRate(sampleRate);
+            initialProbeFormat.setChannelCount(maxChannelsForFormFactor);
 
-            qCDebug(qLcAudioDeviceProbes) << "probing: maxChannelForFormat" << sampleFormat << sampleRate << maxChannelForFormat;
+            qCDebug(qLcAudioDeviceProbes) << "probeFormats: probing for" << initialProbeFormat;
 
-            if (!maxChannelForFormat)
-                continue;
+            std::optional<QAudioFormat> initialProbeResult = performIsFormatSupportedWithClosestMatch(
+                    audioClient, initialProbeFormat);
 
-            for (int channelCount = 1; channelCount != *maxChannelForFormat + 1; ++channelCount) {
+            int maxChannelForFormat;
+            if (initialProbeResult) {
+                if (initialProbeResult->sampleRate() != sampleRate) {
+                    qCDebug(qLcAudioDeviceProbes) << "probing: returned a different sample rate as closest match ..." << *initialProbeResult;
+                    continue;
+                }
+
+                if (initialProbeResult->sampleFormat() != sampleFormat) {
+                    qCDebug(qLcAudioDeviceProbes) << "probing: returned a different sample format as closest match ...";
+                    continue;
+                }
+                maxChannelForFormat = initialProbeResult->channelCount();
+            } else {
+                // some drivers seem to not report any closest match, but simply fail.
+                // in this case we need to brute-force enumerate the formats
+                // however probing is rather expensive, so we limit our probes to a maxmimum of 2 channels
+                maxChannelForFormat = std::min(maxChannelsForFormFactor, 2);
+            }
+
+            for (int channelCount = 1; channelCount != maxChannelForFormat + 1; ++channelCount) {
                 QAudioFormat fmt;
                 fmt.setSampleFormat(sampleFormat);
                 fmt.setSampleRate(sampleRate);
